--- a/best-seller.html
+++ b/best-seller.html
@@ -92,7 +92,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-md-6 col-sm-6 d-flex align-items-center mb-3">
+                <div class="col-lg-6 col-md-6 col-sm-6 d-flex align-items-center mb-3 filter-lg">
                     <strong class="mr-2">Bộ lọc:</strong>
                     <select class="form-control form-control-sm mr-2">
                         <option>Khoảng giá</option>
@@ -110,8 +110,11 @@
                         <option>XXL</option>
                     </select>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-md-6 col-sm-6 d-flex align-items-center justify-content-end mb-3">
+                <div class="col-lg-6 col-md-6 col-sm-6 sort-sm mb-3">
                     <strong><i class="fa fa-bars" aria-hidden="true"></i>  Sắp xếp theo</strong>
+                </div>
+                <div class="col-sm-6 filter-sm">
+                    <strong class="mr-2"><i class="fa fa-filter" aria-hidden="true"></i> Bộ lọc</strong>
                 </div>
             </div>
             <div id="productList" class="row product__filter">
