--- a/female.html
+++ b/female.html
@@ -91,7 +91,7 @@
             <h3 class="w-100 text-center p-3"><strong>SẢN PHẨM CẦN TÌM</strong></h3>
         </div>
         <div class="container">
-            <div class="d-flex mb-4">
+            <div class="d-flex mb-4 justify-content-center flex-wrap">
                <div class="clothes-type">
                     <a href="category.html"><img src="./img/clothes-type/simicategory_filename_tablet1698394465.webp"/></a>
                     <h5 class="text-center">Áo phông</h5>
@@ -114,7 +114,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-md-6 col-sm-6 d-flex align-items-center mb-3">
+                <!-- <div class="col-lg-6 col-md-6 col-sm-6 col-md-6 col-sm-6 d-flex align-items-center mb-3">
                     <strong class="mr-2">Bộ lọc:</strong>
                     <select class="form-control form-control-sm mr-2">
                         <option>Khoảng giá</option>
@@ -134,6 +134,30 @@
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-md-6 col-sm-6 d-flex align-items-center justify-content-end mb-3">
                     <strong><i class="fa fa-bars" aria-hidden="true"></i>  Sắp xếp theo</strong>
+                </div> -->
+                <div class="col-lg-6 col-md-6 col-sm-6 d-flex align-items-center mb-3 filter-lg">
+                    <strong class="mr-2">Bộ lọc:</strong>
+                    <select class="form-control form-control-sm mr-2">
+                        <option>Khoảng giá</option>
+                        <option>< 200.000 đ</option>
+                        <option>200.000 đ - 500.000 đ</option>
+                        <option>500.000 đ - 1.000.000 đ</option>
+                        <option>> 1.000.000 đ</option>
+                    </select>
+                    <select class="form-control form-control-sm mr-2">
+                        <option>Kích thước</option>
+                        <option>S</option>
+                        <option>M</option>
+                        <option>L</option>
+                        <option>XL</option>
+                        <option>XXL</option>
+                    </select>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-6 sort-sm mb-3">
+                    <strong><i class="fa fa-bars" aria-hidden="true"></i>  Sắp xếp theo</strong>
+                </div>
+                <div class="col-sm-6 filter-sm">
+                    <strong class="mr-2"><i class="fa fa-filter" aria-hidden="true"></i> Bộ lọc</strong>
                 </div>
             </div>
             <div id="productList" class="row product__filter">
