--- a/admin-product-edit.html
+++ b/admin-product-edit.html
@@ -179,7 +179,7 @@
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4 bg-light">
                 <a style="color: #5A607F;" href="/admin-products.html"><span><i class="fa fa-arrow-left" aria-hidden="true"></i></span> Back</a>
-                <h2 id="page-title">Sản phẩm</h2>
+                <h2 id="page-title" class="mt-2 mb-5"><strong>Sửa sản phẩm</strong></h2>
                 <form action="POST" id="checkout-form" class="mt-4 mx-2" enctype="multipart/form-data" onsubmit="checkoutFormSubmit()">
                     <h4>Thông tin sản phẩm</h4>
                     <div class="row mt-3">
