--- a/admin-news.html
+++ b/admin-news.html
@@ -72,15 +72,15 @@
                                 Đơn hàng
                             </a>
                         </li>
-                        <li class="nav-item p-2 rounded " style="background-color: #AD0820;">
-                            <a class="nav-link text-white font-weight-bold" href="/admin-products.html">
-                                <img class="mr-2" src="/img/icon/product-active.png" alt="">
+                        <li class="nav-item p-2 rounded">
+                            <a class="nav-link text-dark font-weight-bold" href="/admin-products.html">
+                                <img class="mr-2" src="/img/icon/product.png" alt="">
                                 Sản phẩm
                             </a>
                         </li>
-                        <li class="nav-item p-2 rounded">
-                            <a class="nav-link text-dark font-weight-bold" href="/admin-news.html">
-                                <img class="mr-2" src="/img/icon/new.png" alt="">
+                        <li class="nav-item p-2 rounded" style="background-color: #AD0820;">
+                            <a class="nav-link text-white font-weight-bold" href="/admin-news.html">
+                                <img class="mr-2" src="/img/icon/new-active.png" alt="">
                                 Tin tức
                             </a>
                         </li>
@@ -107,15 +107,15 @@
             </nav>
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4 bg-light">
-                <h2 id="page-title">Sản phẩm</h2>
+                <h2 id="page-title">Tin tức</h2>
                 <div class="table bg-white mt-2 p-4">
                     <div id="table-filter" class="row">
                         <div class="d-flex flex-column w-100">
                             <div class="d-flex justify-content-end mr-3">
-                                <a id="btn-add" class="btn btn-light text-danger" href="/admin-product-add.html">
+                                <a id="btn-add" class="btn btn-light text-danger" href="/admin-new-add.html">
                                     <i class="fa fa-plus" aria-hidden="true"></i>
                                 </a>
-                                <a id="btn-edit" class="btn btn-light ml-2 disabled" href="/admin-product-edit.html">
+                                <a id="btn-edit" class="btn btn-light ml-2 disabled" href="/admin-new-edit.html">
                                     <i class="fa fa-pencil" aria-hidden="true"></i>
                                 </a>
                                 <a id="btn-delete" class="btn btn-light ml-2 disabled">
@@ -125,11 +125,10 @@
                             <div class="d-flex mt-1 mx-3">
                                 <select class="form-control" name="filter" id="cars" style="width: 140px;">
                                     <option value="">Bộ lọc</option>
-                                    <option value="1">Tên</option>
-                                    <option value="2">Số lượng</option>
-                                    <option value="3">Màu</option>
-                                    <option value="4">Giá</option>
-                                    <option value="5">Đánh giá</option>
+                                    <option value="1">Ảnh chính</option>
+                                    <option value="2">Nội dung chính</option>
+                                    <option value="3">Ngày đăng</option>
+                                    <option value="4">Lượt xem</option>
                                 </select>
                                 <input class="form-control ml-sm-2" type="search" placeholder="Tìm kiếm" aria-label="Search" style="width: 300px;">
                             </div>
@@ -144,11 +143,10 @@
                                             <th class="border-0">
                                                 <input type="checkbox" id="checkboxAll" name="checkboxAll" value="0">
                                             </th>
-                                            <th class="border-0">Sản phẩm</th>
-                                            <th class="border-0">Số lượng</th>
-                                            <th class="border-0">Màu</th>
-                                            <th class="border-0">giá</th>
-                                            <th class="border-0">Đánh giá</th>
+                                            <th class="border-0">Ảnh chính</th>
+                                            <th class="border-0">Nội dung chính</th>
+                                            <th class="border-0">Ngày đăng</th>
+                                            <th class="border-0">Lượt xem</th>
                                         </tr>
                                     </thead>
                                     <tbody style="overflow-y: auto;" >
@@ -157,91 +155,44 @@
                                                 <input type="checkbox" class="checkboxItem" name="checkboxAll" value="0">
                                             </td>
                                             <td class="border-0 align-middle d-flex">
-                                                <img class="" src="img/nu/aophong/aophong1/4.webp" alt="" style="max-height: 50px;">
-                                                <span class="ml-1 my-auto">Áo phông nữ cotton dáng ngắn in chữ</span>
+                                                <img class="" src="img/news/1.png" alt="" style="max-height: 102px;">
                                             </td>
-                                            <td class="border-0 align-middle">55 trong kho</td>
-                                            <td class="border-0 align-middle">Tím</td>
-                                            <td class="border-0 align-middle">149,500 <span style="text-decoration: underline;">đ</span></td>
-                                            <td class="border-0 align-middle">5.0 (32 đánh giá)</td>
+                                            <td class="border-0 align-middle">Những mẫu thời trang nổi tiếng đầu năm 2024</td>
+                                            <td class="border-0 align-middle">12/03/2024</td>
+                                            <td class="border-0 align-middle">80 lượt xem</td>
                                         </tr>
                                         <tr class="border-bottom item">
                                             <td class="border-0 align-middle">
                                                 <input type="checkbox" class="checkboxItem" name="checkboxAll" value="0">
                                             </td>
                                             <td class="border-0 align-middle d-flex">
-                                                <img class="" src="img/nu/aophong/aophong1/4.webp" alt="" style="max-height: 50px;">
-                                                <span class="ml-1 my-auto">Áo phông nữ cotton dáng ngắn in chữ</span>
+                                                <img class="" src="img/news/1.png" alt="" style="max-height: 102px;">
                                             </td>
-                                            <td class="border-0 align-middle">55 trong kho</td>
-                                            <td class="border-0 align-middle">Tím</td>
-                                            <td class="border-0 align-middle">149,500 <span style="text-decoration: underline;">đ</span></td>
-                                            <td class="border-0 align-middle">5.0 (32 đánh giá)</td>
+                                            <td class="border-0 align-middle">Phối áo thun và quần Jeans: 15 style cho nàng "thử sức"</td>
+                                            <td class="border-0 align-middle">12/03/2024</td>
+                                            <td class="border-0 align-middle">80 lượt xem</td>
                                         </tr>
                                         <tr class="border-bottom item">
                                             <td class="border-0 align-middle">
                                                 <input type="checkbox" class="checkboxItem" name="checkboxAll" value="0">
                                             </td>
                                             <td class="border-0 align-middle d-flex">
-                                                <img class="" src="img/nu/aophong/aophong1/4.webp" alt="" style="max-height: 50px;">
-                                                <span class="ml-1 my-auto">Áo phông nữ cotton dáng ngắn in chữ</span>
+                                                <img class="" src="img/news/2.png" alt="" style="max-height: 102px;">
                                             </td>
-                                            <td class="border-0 align-middle">55 trong kho</td>
-                                            <td class="border-0 align-middle">Tím</td>
-                                            <td class="border-0 align-middle">149,500 <span style="text-decoration: underline;">đ</span></td>
-                                            <td class="border-0 align-middle">5.0 (32 đánh giá)</td>
+                                            <td class="border-0 align-middle">3 cách mặc áo sơ mi bò denim nam cho chàng thêm nổi bật</td>
+                                            <td class="border-0 align-middle">10/02/2024</td>
+                                            <td class="border-0 align-middle">80 lượt xem</td>
                                         </tr>
                                         <tr class="border-bottom item">
                                             <td class="border-0 align-middle">
                                                 <input type="checkbox" class="checkboxItem" name="checkboxAll" value="0">
                                             </td>
                                             <td class="border-0 align-middle d-flex">
-                                                <img class="" src="img/nu/aophong/aophong1/4.webp" alt="" style="max-height: 50px;">
-                                                <span class="ml-1 my-auto">Áo phông nữ cotton dáng ngắn in chữ</span>
+                                                <img class="" src="img/news/3.png" alt="" style="max-height: 102px;">
                                             </td>
-                                            <td class="border-0 align-middle">55 trong kho</td>
-                                            <td class="border-0 align-middle">Tím</td>
-                                            <td class="border-0 align-middle">149,500 <span style="text-decoration: underline;">đ</span></td>
-                                            <td class="border-0 align-middle">5.0 (32 đánh giá)</td>
-                                        </tr>
-                                        <tr class="border-bottom item">
-                                            <td class="border-0 align-middle">
-                                                <input type="checkbox" class="checkboxItem" name="checkboxAll" value="0">
-                                            </td>
-                                            <td class="border-0 align-middle d-flex">
-                                                <img class="" src="img/nu/aophong/aophong1/4.webp" alt="" style="max-height: 50px;">
-                                                <span class="ml-1 my-auto">Áo phông nữ cotton dáng ngắn in chữ</span>
-                                            </td>
-                                            <td class="border-0 align-middle">55 trong kho</td>
-                                            <td class="border-0 align-middle">Tím</td>
-                                            <td class="border-0 align-middle">149,500 <span style="text-decoration: underline;">đ</span></td>
-                                            <td class="border-0 align-middle">5.0 (32 đánh giá)</td>
-                                        </tr>
-                                        <tr class="border-bottom item">
-                                            <td class="border-0 align-middle">
-                                                <input type="checkbox" class="checkboxItem" name="checkboxAll" value="0">
-                                            </td>
-                                            <td class="border-0 align-middle d-flex">
-                                                <img class="" src="img/nu/aophong/aophong1/4.webp" alt="" style="max-height: 50px;">
-                                                <span class="ml-1 my-auto">Áo phông nữ cotton dáng ngắn in chữ</span>
-                                            </td>
-                                            <td class="border-0 align-middle">55 trong kho</td>
-                                            <td class="border-0 align-middle">Tím</td>
-                                            <td class="border-0 align-middle">149,500 <span style="text-decoration: underline;">đ</span></td>
-                                            <td class="border-0 align-middle">5.0 (32 đánh giá)</td>
-                                        </tr>
-                                        <tr class="border-bottom item">
-                                            <td class="border-0 align-middle">
-                                                <input type="checkbox" class="checkboxItem" name="checkboxAll" value="0">
-                                            </td>
-                                            <td class="border-0 align-middle d-flex">
-                                                <img class="" src="img/nu/aophong/aophong1/4.webp" alt="" style="max-height: 50px;">
-                                                <span class="ml-1 my-auto">Áo phông nữ cotton dáng ngắn in chữ</span>
-                                            </td>
-                                            <td class="border-0 align-middle">55 trong kho</td>
-                                            <td class="border-0 align-middle">Tím</td>
-                                            <td class="border-0 align-middle">149,500 <span style="text-decoration: underline;">đ</span></td>
-                                            <td class="border-0 align-middle">5.0 (32 đánh giá)</td>
+                                            <td class="border-0 align-middle">Áo polo là gì ? </td>
+                                            <td class="border-0 align-middle">30/01/2024</td>
+                                            <td class="border-0 align-middle">80 lượt xem</td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -272,35 +223,6 @@
             </main>
         </div>
     </div>
-
-    <script>
-        function deleteItem() {
-            event.target.closest(".item").remove();
-            // const items = document.querySelectorAll(".list-item .item");
-            // if (items.length == 0) {
-            //     window.scrollTo({ top: 0, behavior: "smooth" });
-            //     const favouriteContainer = document.getElementById("cart-container");
-            //     favouriteContainer.innerHTML = `<div id="favourite-empty" class="row py-5 px-5">
-            //         <div class="col">
-            //             <div class="row">
-            //                 <img src="/img/empty-cart.png" alt="">
-            //             </div>
-            //             <div class="row">
-            //                 <div class="col-lg-12 col-md-12 mx-auto text-center">
-            //                     <h3 class="font-weight-bold">GIỎ HÀNG RỖNG</h3>
-            //                 </div>
-            //             </div>
-            //             <div class="row mt-3">
-            //                 <div class="col-lg-12 col-md-12 mx-auto text-center">
-            //                     <p class="">Không có sản phẩm nào trong giỏ hàng của bạn.</p>
-            //                 </div>
-            //             </div>
-            //             <a href="#" class="col btn btn-dark text-center mt-5 py-2">TIẾP TỤC MUA SẮM</a>
-            //         </div>
-            //     </div>`;
-            // }
-        }
-    </script>
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
