--- a/admin-product-edit.html
+++ b/admin-product-edit.html
@@ -132,43 +132,43 @@
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column mt-4">
                         <li class="nav-item p-2 rounded">
-                            <a class="nav-link text-dark font-weight-bold" href="#">
+                            <a class="nav-link text-dark font-weight-bold" href="/admin-index.html">
                                 <img class="mr-2" src="/img/icon/general.png" alt="">
-                                Tổng quan <span class="sr-only">(current)</span>
+                                Tổng quan <span class="sr-only"></span>
                             </a>
                         </li>
                         <li class="nav-item p-2 rounded">
-                            <a class="nav-link text-dark font-weight-bold" href="#">
+                            <a class="nav-link text-dark font-weight-bold" href="/admin-orders.html">
                                 <img class="mr-2" src="/img/icon/order.png" alt="">
                                 Đơn hàng
                             </a>
                         </li>
                         <li class="nav-item p-2 rounded " style="background-color: #AD0820;">
-                            <a class="nav-link text-white font-weight-bold" href="#">
+                            <a class="nav-link text-white font-weight-bold" href="/admin-products.html">
                                 <img class="mr-2" src="/img/icon/product-active.png" alt="">
                                 Sản phẩm
                             </a>
                         </li>
                         <li class="nav-item p-2 rounded">
-                            <a class="nav-link text-dark font-weight-bold" href="#">
+                            <a class="nav-link text-dark font-weight-bold" href="/admin-news.html">
                                 <img class="mr-2" src="/img/icon/new.png" alt="">
                                 Tin tức
                             </a>
                         </li>
                         <li class="nav-item p-2 rounded">
-                            <a class="nav-link text-dark font-weight-bold" href="#">
+                            <a class="nav-link text-dark font-weight-bold" href="/admin-customers.html">
                                 <img class="mr-2" src="/img/icon/customer.png" alt="">
                                 Khách hàng
                             </a>
                         </li>
                         <li class="nav-item p-2 rounded">
-                            <a class="nav-link text-dark font-weight-bold" href="#">
+                            <a class="nav-link text-dark font-weight-bold" href="/admin-employees.html">
                                 <img class="mr-2" src="/img/icon/employee.png" alt="">
                                 Nhân viên
                             </a>
                         </li>
                         <li class="nav-item p-2 rounded">
-                            <a class="nav-link text-dark font-weight-bold" href="#">
+                            <a class="nav-link text-dark font-weight-bold" href="/admin-logout.html">
                                 <img class="mr-2" src="/img/icon/logout.png" alt="">
                                 Đăng xuất
                             </a>
