--- a/admin-customers.html
+++ b/admin-customers.html
@@ -110,7 +110,7 @@
                             </a>
                         </li>
                         <li class="nav-item p-2 rounded">
-                            <a class="nav-link text-dark font-weight-bold" href="/admin-logout.html">
+                            <a class="nav-link text-dark font-weight-bold" href="/admin-login.html">
                                 <img class="mr-2" src="/img/icon/logout.png" alt="">
                                 Đăng xuất
                             </a>
