--- a/admin-login.html
+++ b/admin-login.html
@@ -51,7 +51,7 @@
             <img src="img/logo/logonew-03.jpg" alt="" class="mx-auto" style="object-fit: cover; height: 137px; width: 137px;">
             <p class="mx-auto">Vui lòng nhập email và mật khẩu để tiếp tục</p>
             <div class="card-body pt-0">
-                <form action="/admin-index.html" method="get">
+                <form action="./admin-index.html" method="get">
                     <div class="form-group">
                         <label for="exampleInputEmail1">Email</label>
                         <input type="email" class="form-control bg-light" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
