--- a/admin-employees.html
+++ b/admin-employees.html
@@ -74,43 +74,43 @@
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column mt-4">
                         <li class="nav-item p-2 rounded">
-                            <a class="nav-link text-dark font-weight-bold" href="/admin-index.html">
+                            <a class="nav-link text-dark font-weight-bold" href="./admin-index.html">
                                 <img class="mr-2" src="/img/icon/general.png" alt="">
                                 Tổng quan <span class="sr-only"></span>
                             </a>
                         </li>
                         <li class="nav-item p-2 rounded">
-                            <a class="nav-link text-dark font-weight-bold" href="/admin-orders.html">
+                            <a class="nav-link text-dark font-weight-bold" href="./admin-orders.html">
                                 <img class="mr-2" src="/img/icon/order.png" alt="">
                                 Đơn hàng
                             </a>
                         </li>
                         <li class="nav-item p-2 rounded">
-                            <a class="nav-link text-dark font-weight-bold" href="/admin-products.html">
+                            <a class="nav-link text-dark font-weight-bold" href="./admin-products.html">
                                 <img class="mr-2" src="/img/icon/product.png" alt="">
                                 Sản phẩm
                             </a>
                         </li>
                         <li class="nav-item p-2 rounded">
-                            <a class="nav-link text-dark font-weight-bold" href="/admin-news.html">
+                            <a class="nav-link text-dark font-weight-bold" href="./admin-news.html">
                                 <img class="mr-2" src="/img/icon/new.png" alt="">
                                 Tin tức
                             </a>
                         </li>
                         <li class="nav-item p-2 rounded">
-                            <a class="nav-link text-dark font-weight-bold" href="/admin-customers.html">
+                            <a class="nav-link text-dark font-weight-bold" href="./admin-customers.html">
                                 <img class="mr-2" src="/img/icon/customer.png" alt="">
                                 Khách hàng
                             </a>
                         </li>
                         <li class="nav-item p-2 rounded" style="background-color: #AD0820;">
-                            <a class="nav-link text-white font-weight-bold" href="/admin-employees.html">
+                            <a class="nav-link text-white font-weight-bold" href="./admin-employees.html">
                                 <img class="mr-2" src="/img/icon/employee-active.png" alt="">
                                 Nhân viên
                             </a>
                         </li>
                         <li class="nav-item p-2 rounded">
-                            <a class="nav-link text-dark font-weight-bold" href="/admin-login.html">
+                            <a class="nav-link text-dark font-weight-bold" href="./admin-login.html">
                                 <img class="mr-2" src="/img/icon/logout.png" alt="">
                                 Đăng xuất
                             </a>
@@ -125,10 +125,10 @@
                     <div id="table-filter" class="row">
                         <div class="d-flex flex-column w-100">
                             <div class="d-flex justify-content-end mr-3">
-                                <a id="btn-add" class="btn btn-light text-danger" href="/admin-employee-add.html">
+                                <a id="btn-add" class="btn btn-light text-danger" href="./admin-employee-add.html">
                                     <i class="fa fa-plus" aria-hidden="true"></i>
                                 </a>
-                                <a id="btn-edit" class="btn btn-light ml-2 disabled" href="/admin-employee-edit.html">
+                                <a id="btn-edit" class="btn btn-light ml-2 disabled" href="./admin-employee-edit.html">
                                     <i class="fa fa-pencil" aria-hidden="true"></i>
                                 </a>
                                 <a id="btn-delete" class="btn btn-light ml-2 disabled">
