--- a/admin-product-edit.html
+++ b/admin-product-edit.html
@@ -132,43 +132,43 @@
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column mt-4">
                         <li class="nav-item p-2 rounded">
-                            <a class="nav-link text-dark font-weight-bold" href="/admin-index.html">
+                            <a class="nav-link text-dark font-weight-bold" href="./admin-index.html">
                                 <img class="mr-2" src="/img/icon/general.png" alt="">
                                 Tổng quan <span class="sr-only"></span>
                             </a>
                         </li>
                         <li class="nav-item p-2 rounded">
-                            <a class="nav-link text-dark font-weight-bold" href="/admin-orders.html">
+                            <a class="nav-link text-dark font-weight-bold" href="./admin-orders.html">
                                 <img class="mr-2" src="/img/icon/order.png" alt="">
                                 Đơn hàng
                             </a>
                         </li>
                         <li class="nav-item p-2 rounded " style="background-color: #AD0820;">
-                            <a class="nav-link text-white font-weight-bold" href="/admin-products.html">
+                            <a class="nav-link text-white font-weight-bold" href="./admin-products.html">
                                 <img class="mr-2" src="/img/icon/product-active.png" alt="">
                                 Sản phẩm
                             </a>
                         </li>
                         <li class="nav-item p-2 rounded">
-                            <a class="nav-link text-dark font-weight-bold" href="/admin-news.html">
+                            <a class="nav-link text-dark font-weight-bold" href="./admin-news.html">
                                 <img class="mr-2" src="/img/icon/new.png" alt="">
                                 Tin tức
                             </a>
                         </li>
                         <li class="nav-item p-2 rounded">
-                            <a class="nav-link text-dark font-weight-bold" href="/admin-customers.html">
+                            <a class="nav-link text-dark font-weight-bold" href="./admin-customers.html">
                                 <img class="mr-2" src="/img/icon/customer.png" alt="">
                                 Khách hàng
                             </a>
                         </li>
                         <li class="nav-item p-2 rounded">
-                            <a class="nav-link text-dark font-weight-bold" href="/admin-employees.html">
+                            <a class="nav-link text-dark font-weight-bold" href="./admin-employees.html">
                                 <img class="mr-2" src="/img/icon/employee.png" alt="">
                                 Nhân viên
                             </a>
                         </li>
                         <li class="nav-item p-2 rounded">
-                            <a class="nav-link text-dark font-weight-bold" href="/admin-login.html">
+                            <a class="nav-link text-dark font-weight-bold" href="./admin-login.html">
                                 <img class="mr-2" src="/img/icon/logout.png" alt="">
                                 Đăng xuất
                             </a>
@@ -178,7 +178,7 @@
             </nav>
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4 bg-light">
-                <a style="color: #5A607F;" href="/admin-products.html"><span><i class="fa fa-arrow-left" aria-hidden="true"></i></span> Back</a>
+                <a style="color: #5A607F;" href="./admin-products.html"><span><i class="fa fa-arrow-left" aria-hidden="true"></i></span> Back</a>
                 <h2 id="page-title" class="mt-2 mb-5"><strong>Sửa sản phẩm</strong></h2>
                 <form action="POST" id="checkout-form" class="mt-4 mx-2" enctype="multipart/form-data" onsubmit="checkoutFormSubmit()">
                     <h4>Thông tin sản phẩm</h4>
@@ -344,7 +344,7 @@
                         <div class="col-md-12 col-lg-12 text-center">
                             <div class="">
                                 <!-- <button type="submit" class=" btn btn-danger text-center font-weight-bold">Lưu sản phẩm</button> -->
-                                <a href="/admin-products.html" class=" btn btn-danger text-center font-weight-bold">Lưu sản phẩm</a>
+                                <a href="./admin-products.html" class=" btn btn-danger text-center font-weight-bold">Lưu sản phẩm</a>
                             </div>
                         </div>
                     </div>
