--- a/account.html
+++ b/account.html
@@ -113,9 +113,9 @@
                     <nav class="header__menu mobile-menu">
                         <ul>
                             <li><a href="./best-seller.html">Sản phẩm bán chạy</a></li>
-                            <li class="active"><a href="#">Nữ</a></li>
+                            <li><a href="./female.html">Nữ</a></li>
                             <li><a href="./male.html">Nam</a></li>
-                            <li><a href="#">Tin tức</a></li>
+                            <li><a href="./news.html">Tin tức</a></li>
                             <li><a href="./introduce.html">Giới thiệu</a></li>
                         </ul>
                     </nav>
@@ -130,9 +130,13 @@
                                 <i class="fa fa-heart d-block text-danger text-center"></i>
                                 <span class="d-block">Yêu thích</span>
                             </div>
-                            <div class="col-lg-2 col-md-2">
-                                <i class="fa fa-user-circle d-block text-danger text-center"></i>
-                                <span class="d-block text-center">Tài khoản</span>
+                           <div id="loginName" class="col-lg-2 col-md-2">
+                                <i class="fa fa-user-circle d-block text-danger text-center" data-toggle="modal" data-target="#exampleModal"></i>
+                                <span class="d-block text-center cursor-pointer" data-toggle="modal" data-target="#exampleModal">Tài khoản</span>
+                            </div>
+                            <div id="username" class="d-none col-lg-2 col-md-2">
+                                <a href="./account.html" class="d-block m-0"><i class="fa fa-user-circle d-block text-danger text-center" data-toggle="modal" data-target="#exampleModal"></i></a>
+                                <span class="d-block text-center cursor-pointer"><a href="./account.html" style="color: black;">Sơn Hà</a></span>
                             </div>
                             <div class="col-lg-2 col-md-2">
                                 <i class="fa fa-shopping-bag d-block text-danger text-center"></i>
