--- a/admin-new-add.html
+++ b/admin-new-add.html
@@ -147,7 +147,7 @@
                     </div>
                     <div class="row mt-3">
                         <div class="col">
-                            <label for="">Tiêu để 1</label>
+                            <label for="">Tiêu đề 1</label>
                             <input type="text" class="form-control mx-0" id="title1-name" placeholder="Tên tiêu đề 1" 
                                 style="border: 1px solid #ced4da; border-radius: .25rem; background-image: unset; padding: .375rem .75rem;"
                             >
