--- a/checkout-fail.html
+++ b/checkout-fail.html
@@ -62,9 +62,13 @@
                                     <p class="d-block text-center m-0" style="font-size: 14px; line-height: 21px;">Yêu thích</p>
                                 </a>
                             </div>
-                            <div class="col-lg-2 col-md-2">
-                                <i class="fa fa-user-circle d-block text-danger text-center"></i>
-                                <span class="d-block text-center">Tài khoản</span>
+                           <div id="loginName" class="col-lg-2 col-md-2">
+                                <i class="fa fa-user-circle d-block text-danger text-center" data-toggle="modal" data-target="#exampleModal"></i>
+                                <span class="d-block text-center cursor-pointer" data-toggle="modal" data-target="#exampleModal">Tài khoản</span>
+                            </div>
+                            <div id="username" class="d-none col-lg-2 col-md-2">
+                                <a href="./account.html" class="d-block m-0"><i class="fa fa-user-circle d-block text-danger text-center" data-toggle="modal" data-target="#exampleModal"></i></a>
+                                <span class="d-block text-center cursor-pointer"><a href="./account.html" style="color: black;">Sơn Hà</a></span>
                             </div>
                             <div class="col-lg-2 col-md-2">
                                 <a class="d-block" href="/shopping-cart.html">
