--- a/admin-index.html
+++ b/admin-index.html
@@ -62,43 +62,43 @@
                     <ul class="nav flex-column mt-4">
                         <li class="nav-item p-2 rounded" style="background-color: #AD0820;">
                             <a class="nav-link text-white font-weight-bold" href="./admin-index.html">
-                                <img class="mr-2" src="/img/icon/general-active.png" alt="">
+                                <img class="mr-2" src="./img/icon/general-active.png" alt="">
                                 Tổng quan <span class="sr-only">(current)</span>
                             </a>
                         </li>
                         <li class="nav-item p-2 rounded">
                             <a class="nav-link text-dark font-weight-bold" href="./admin-orders.html">
-                                <img class="mr-2" src="/img/icon/order.png" alt="">
+                                <img class="mr-2" src="./img/icon/order.png" alt="">
                                 Đơn hàng
                             </a>
                         </li>
                         <li class="nav-item p-2 rounded ">
                             <a class="nav-link text-dark font-weight-bold" href="./admin-products.html">
-                                <img class="mr-2" src="/img/icon/product.png" alt="">
+                                <img class="mr-2" src="./img/icon/product.png" alt="">
                                 Sản phẩm
                             </a>
                         </li>
                         <li class="nav-item p-2 rounded">
                             <a class="nav-link text-dark font-weight-bold" href="./admin-news.html">
-                                <img class="mr-2" src="/img/icon/new.png" alt="">
+                                <img class="mr-2" src="./img/icon/new.png" alt="">
                                 Tin tức
                             </a>
                         </li>
                         <li class="nav-item p-2 rounded">
                             <a class="nav-link text-dark font-weight-bold" href="./admin-customers.html">
-                                <img class="mr-2" src="/img/icon/customer.png" alt="">
+                                <img class="mr-2" src="./img/icon/customer.png" alt="">
                                 Khách hàng
                             </a>
                         </li>
                         <li class="nav-item p-2 rounded">
                             <a class="nav-link text-dark font-weight-bold" href="./admin-employees.html">
-                                <img class="mr-2" src="/img/icon/employee.png" alt="">
+                                <img class="mr-2" src="./img/icon/employee.png" alt="">
                                 Nhân viên
                             </a>
                         </li>
                         <li class="nav-item p-2 rounded">
                             <a class="nav-link text-dark font-weight-bold" href="./admin-login.html">
-                                <img class="mr-2" src="/img/icon/logout.png" alt="">
+                                <img class="mr-2" src="./img/icon/logout.png" alt="">
                                 Đăng xuất
                             </a>
                         </li>
@@ -117,11 +117,11 @@
                                         <h5 class="card-title text-muted">Tổng người dùng</h5>
                                         <h4 class="card-subtitle mt-4 font-weight-bold">1,233</h4>
                                     </div>
-                                    <img src="/img/icon/total-user.png" alt="">
+                                    <img src="./img/icon/total-user.png" alt="">
                                 </div>
                                 <p class="card-text mt-4">
                                     <span class="text-success">
-                                        <img src="/img/icon/ic-trending-up-24px.png" alt="">8.5%
+                                        <img src="./img/icon/ic-trending-up-24px.png" alt="">8.5%
                                     </span>
                                     Tăng so với tuần trước
                                 </p>
@@ -136,11 +136,11 @@
                                         <h5 class="card-title text-muted">Tổng đơn hàng</h5>
                                         <h4 class="card-subtitle mt-4 font-weight-bold">8,293</h4>
                                     </div>
-                                    <img src="/img/icon/total-order.png" alt="">
+                                    <img src="./img/icon/total-order.png" alt="">
                                 </div>
                                 <p class="card-text mt-4">
                                     <span class="text-success">
-                                        <img src="/img/icon/ic-trending-up-24px.png" alt="">1.3%
+                                        <img src="./img/icon/ic-trending-up-24px.png" alt="">1.3%
                                     </span>
                                     Tăng so với tuần trước
                                 </p>
@@ -155,11 +155,11 @@
                                         <h5 class="card-title text-muted">Tổng doanh thu</h5>
                                         <h4 class="card-subtitle mt-4 font-weight-bold">22,111,000đ</h4>
                                     </div>
-                                    <img src="/img/icon/total-user.png" alt="">
+                                    <img src="./img/icon/total-user.png" alt="">
                                 </div>
                                 <p class="card-text mt-4">
                                     <span class="text-success">
-                                        <img src="/img/icon/ic-trending-down-24px.png" alt="">4.3%
+                                        <img src="./img/icon/ic-trending-down-24px.png" alt="">4.3%
                                     </span>
                                     Giảm so với tuần trước
                                 </p>
@@ -174,11 +174,11 @@
                                         <h5 class="card-title text-muted">Tổng đơn hoàn trả</h5>
                                         <h4 class="card-subtitle mt-4 font-weight-bold">231</h4>
                                     </div>
-                                    <img src="/img/icon/total-return-order.png" alt="">
+                                    <img src="./img/icon/total-return-order.png" alt="">
                                 </div>
                                 <p class="card-text mt-4">
                                     <span class="text-success">
-                                        <img src="/img/icon/ic-trending-up-24px.png" alt="">1.8%
+                                        <img src="./img/icon/ic-trending-up-24px.png" alt="">1.8%
                                     </span>
                                     Tăng so với tuần trước
                                 </p>
@@ -221,7 +221,7 @@
                                 </div>
                             </div>
                             <div class="chart">
-                                <img src="/img/chart.png" alt="">
+                                <img src="./img/chart.png" alt="">
                             </div>
                         </div>
                     </div>
