--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                 <div class="form-group">
                                     <input type="password" class="form-control btn-round px-3" id="password1" placeholder="Mật khẩu">
                                 </div>
-                                <button type="button" class="btn btn-black btn-block btn-round">Đăng nhập</button>
+                                <button id="buttonLogin" type="button" data-dismiss="modal" class="btn btn-black btn-block btn-round">Đăng nhập</button>
                                 </form>
                             </div>
                             <!-- <div style="justify-content: space-between; padding: 5px 0px;" class="d-flex extendForm">
@@ -156,13 +156,13 @@
                                 <i class="fa fa-heart d-block text-danger text-center"></i>
                                 <span class="d-block">Yêu thích</span>
                             </div>
-                            <div class="col-lg-2 col-md-2">
+                            <div id="loginName" class="col-lg-2 col-md-2">
                                 <i class="fa fa-user-circle d-block text-danger text-center" data-toggle="modal" data-target="#exampleModal"></i>
-                                <!-- Button trigger modal -->
-                                <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                                    Launch demo modal
-                                </button> -->
-                                <span class="d-block text-cente cursor-pointer" data-toggle="modal" data-target="#exampleModal">Tài khoản</span>
+                                <span class="d-block text-center cursor-pointer" data-toggle="modal" data-target="#exampleModal">Tài khoản</span>
+                            </div>
+                            <div id="username" class="d-none col-lg-2 col-md-2">
+                                <a href="./account.html" class="d-block m-0"><i class="fa fa-user-circle d-block text-danger text-center" data-toggle="modal" data-target="#exampleModal"></i></a>
+                                <span class="d-block text-center cursor-pointer"><a href="./account.html" style="color: black;">Sơn Hà</a></span>
                             </div>
                             <div class="col-lg-2 col-md-2">
                                 <i class="fa fa-shopping-bag d-block text-danger text-center"></i>
